welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: '(' expected but identifier found.
while !estSurBiscuit() {
      ^Variables:8: error: '(' expected but identifier found.
while dejaFait!=nbPas {
      ^